# zfs

./: configure.ac
cmd/zpool/: Makefile.am  zpool_main.c
include/: libzfs.h  libzfs_api.h
lib/: Makefile.am
lib/libzfs/: libzfs_pool.c  libzfs_util.c
lib/libzfs_api/: Makefile.am  libzfs_api.c
